carte rucher osm et ign ajouté layer distance de butinage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 proxyHost=
 proxyPort=
 
+# Rayons des cercles de distances de butinage
+rucher.butinage.rayons=1000,2000,3000,4000,5000
+
 # valeur limite du nombre de ruche dans un rucher pour le calcul
 # du parcours exact ou approche
 rucher.parcours.nbruches = 14
