recolteHausse poids initialisé au poids à vide + reste miel. select

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ rucher.butinage.rayons=1000,2000,3000,4000,5000
 # du parcours exact ou approche
 rucher.parcours.nbruches = 14
 
+# Poids en kg estimé du reste du miel dans une hausse après récolte
+# utilisé pour calculer le poids de miel récolté dans la hausse
+# avec une simple pesée avant récolte de la hausse
+hausse.reste.miel = 1
+
 # rayon de dispersion des ruches dans le rucher
 rucher.ruche.dispersion=10
 rucher.map.zoom=20
