application.properties ajout email.from

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,6 +80,7 @@ spring.mail.password=xxxxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # spring.mail.properties.mail.smtp.starttls.enable
+email.from=xxx@free.fr
 
 # logs
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-logging.html
