essaimage nom du nouvel essaim : suffixe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ proxyPort=
 # Rayons des cercles de distances de butinage
 rucher.butinage.rayons=1000,2000,3000,4000,5000
 
+# suffixe pour nouveau nom d'essaim après essaimage
+essaime.suffix=_e
+
+
 # valeur limite du nombre de ruche dans un rucher pour le calcul
 # du parcours exact ou approche
 rucher.parcours.nbruches = 14
