--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# https://www.baeldung.com/cachable-static-assets-with-spring-mvc
+spring.resources.cache.cachecontrol.max-age=7d
+
 # pagination nbre de lignes par défaut
 #   à choisir parmi 10, 25, 50, 100
 datatables.pageLength=25
