calcul de la longueur du parcours des ruches avec OR-Tools

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.ortools/ortools-java -->
+		<dependency>
+			<groupId>com.google.ortools</groupId>
+			<artifactId>ortools-java</artifactId>
+			<version>9.0.9048</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<java.version>11</java.version>
