déploiement ajout sauvegarde war. rucherDetail.js Code convex hull

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,8 @@ accueil.titre=Ruches
 
 # chemin du repertoire webapps de tomcat pour deploiement du war
 tomcat.webapps.path=/var/lib/tomcat9/webapps/
+tomcat.oldwebapps.path=/var/lib/tomcat9/oldWebapps/
+
 # url git
 git.url=https://urlpourmiseajourparmenuadmin/git/ruches
 dump.path=/root/ruchesdump/
