--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Le chemin de la documentation complète de Ruches
+#   résultat d'un export libreoffice
+doc.path=/doc/ruches.html
+
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
