supprimé pageLength de appl.properties. marche plus avec datatables 1.11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.resources.cache.cachecontrol.max-age=7d
 
 # pagination nbre de lignes par défaut
 #   à choisir parmi 10, 25, 50, 100
-datatables.pageLength=25
+# datatables.pageLength=25
 
 # proxy pour meteo openWeatherMap
 proxyHost=
