datables 1.11.1 -> 1.11.2 et réactivé datatables.pageLength

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.resources.cache.cachecontrol.max-age=7d
 
 # pagination nbre de lignes par défaut
 #   à choisir parmi 10, 25, 50, 100
-# datatables.pageLength=25
+#    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
+#       et la pagination ne fonctionne pas
+datatables.pageLength=25
 
 # proxy pour meteo openWeatherMap
 proxyHost=
