application.properties ign.data.key=ortho,parcellaire

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ tomcat.oldwebapps.path=/var/lib/tomcat9/oldWebapps/
 git.url=https://urlpourmiseajourparmenuadmin/git/ruches
 dump.path=/root/ruchesdump/
 
-ign.data.key=ortho,parcellaire,xxxxx
+ign.data.key=ortho,parcellaire
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
 
