Utilisation de ${@environment.getProperty('xxxxx')} dans les templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-# Le chemin de la documentation complète de Ruches
-#   résultat d'un export libreoffice
-doc.path=/doc/ruches.html
-
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
@@ -10,10 +6,6 @@ spring.resources.cache.cachecontrol.max-age=7d
 #    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
 #       et la pagination ne fonctionne pas
 datatables.pageLength=25
-
-# proxy pour meteo openWeatherMap
-proxyHost=
-proxyPort=
 
 # Rayons des cercles de distances de butinage
 rucher.butinage.rayons=1000,2000,3000,4000,5000
@@ -36,14 +28,12 @@ retard.ruches.evenement=4
 
 accueil.titre=Ruches
 
-# chemin du repertoire webapps de tomcat pour deploiement du war
-tomcat.webapps.path=/var/lib/tomcat9/webapps/
-tomcat.oldwebapps.path=/var/lib/tomcat9/oldWebapps/
+// TODO utiliser ${@environment.getProperty('xxxxx')}
+//  supprimer dans  xxController.java
+//    @Value("${xxxxx}")
+//	  private String yyyy;
 
-# url git
-git.url=https://urlpourmiseajourparmenuadmin/git/ruches
-dump.path=/root/ruchesdump/
-
+// TODO créer et tester un fichier autoconf ign sans clé pour les scans 25
 ign.data.key=ortho,parcellaire,agriculture
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
