favicon, suppression messages admin dump et déploie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ retard.ruches.evenement=4
 
 accueil.titre=Ruches
 
-// TODO créer et tester un fichier autoconf ign sans clé pour les scans 25
+// clé inutilisée si fichier autoconf ign
 ign.data.key=ortho,parcellaire,agriculture
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
