--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -62,8 +62,15 @@ server.error.whitelabel.enabled=false
 # spring.datasource.username=postgres
 # spring.datasource.password=postgres
 # spring.datasource.jndi-name=java:comp/env/jdbc/ruches
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+# spring.datasource.initialization-mode=always
 jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+jdbc.url=jdbc:h2:mem:db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+  #\
+  # INIT=RUNSCRIPT FROM 'classpath:structure.sql';\
+  # INIT=RUNSCRIPT FROM 'classpath:ruches_donnees_min.sql';
 jdbc.username=sa
 jdbc.password=sa
 
