--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
+# https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/annotation/Scheduled.html
+# https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.htm#insertedID0
+# https://riptutorial.com/spring/example/21209/cron-expression
+# tous les jours à 1h 21min 10s
+notification.cron=10 21 1 * * ?
+notification.destinataires=ooioo@free.fr
+notification.objet=Ruches Notifications
+// pour une entete de mail multiligne ajouter un espace suivi d'un \ à la fin
+//   des lignes
+notification.entete=Hello !\n\n
+notification.pied=\nBye !
+
+# spring.batch.jdbc.initialize-schema=always
+
 # pagination nbre de lignes par défaut
 #   à choisir parmi 10, 25, 50, 100
 #    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
