Notifications : ajout durée et persistance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.resources.cache.cachecontrol.max-age=7d
 # https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.htm#insertedID0
 # https://riptutorial.com/spring/example/21209/cron-expression
 # tous les jours à 1h 21min 10s
-notification.cron=10 21 1 * * ?
+notification.cron=*/60 * * * * ?
 notification.destinataires=ooioo@free.fr
 notification.objet=Ruches Notifications
 // pour une entete de mail multiligne ajouter un espace suivi d'un \ à la fin
