Calcul des distances, reset=true pour recalcul. chart.js 3.8.2 -> 3.9.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,9 @@ server.error.whitelabel.enabled=false
 # server.error.include-binding-errors=always
 
 # jpa - hibernate
-# spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=update
+
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 # spring.datasource.initialization-mode=always
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
