doc annexe événements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,11 +64,8 @@ server.error.whitelabel.enabled=false
 
 # test version 2.3.1
 # server.error.include-binding-errors=always
-
 # jpa - hibernate
-
-spring.jpa.hibernate.ddl-auto=update
-
+# spring.jpa.hibernate.ddl-auto=update
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 # spring.datasource.initialization-mode=always
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
