url de calcul d'itinéraire ign mis dans application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,8 @@ ign.data.key=ortho,parcellaire,agriculture
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
 
+ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&start=
+
 openweathermap.key=zzzzzz
 
 # spring boot actuator
