--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,7 +77,7 @@ server.error.whitelabel.enabled=false
 # spring.datasource.url=jdbc:postgresql://localhost:5432/ruchesdev
 # spring.datasource.username=postgres
 # spring.datasource.password=postgres
-spring.datasource.jndi-name=java:comp/env/jdbc/ruches
+# spring.datasource.jndi-name=java:comp/env/jdbc/ruches
 
 # Pour eviter plantage si 2 instances d'applications spring sur le meme tomcat
 # https://stackoverflow.com/questions/27440985/unable-to-register-mbean-hikaridatasource-hikaripool-0-with-key-datasource
