EssaimRepository.java "is true" -> "= 'true'"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# hibernate.id.db_structure_naming_strategy=single
+# hibernate.id.db_structure_naming_strategy=legacy
+
+
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
