ajout autoconf.js par défaut sans license ign pour scan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,11 @@ retard.ruches.evenement=4
 accueil.titre=Ruches
 
 // clé inutilisée si fichier autoconf ign
-ign.data.key=ortho,parcellaire,agriculture
+// voir include.html
+ign.data.key=parcellaire,agriculture,essentiels
+// license pour scan IGN fournie, pour activer la couche scan
+ign.carteIGN.license=false
+
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
 
