--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ accueil.titre=Ruches
 // clé inutilisée si fichier autoconf ign
 // voir include.html
 ign.data.key=parcellaire,agriculture,essentiels
-// license pour scan IGN fournie, pour activer la couche scan
+// true si license pour scan IGN fournie. Pour activer la couche scan.
 ign.carteIGN.license=false
 
 gg.map.key=yyyyy
