correction bug "rapprocher ruches trop éloignées", param dist max

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,10 @@ hausse.reste.miel = 1
 
 # rayon de dispersion des ruches dans le rucher
 rucher.ruche.dispersion=10
+# distance au delà de laquelle les ruches sont rapprochées
+#   par le bouton "Rapprocher les ruches trop éloignées" des cartes
+ruche.dist.max=200    
+
 rucher.map.zoom=20
 ruchers.map.zoom=10
 dist.ruches.loins=200
