--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,6 +80,14 @@ server.error.whitelabel.enabled=false
 # spring.datasource.initialization-mode=always
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
+# A mettre dans Catalina/localhost/ruches.xml si migration Spring Boot 2 vers 3
+# spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
+# https://prog.world/migration-to-hibernate-6/
+# https://github.com/hibernate/hibernate-orm/blob/6.0/migration-guide.adoc#id-sequence-table-name
+# https://thorben-janssen.com/migrating-to-hibernate-6/
+# https://docs.jboss.org/hibernate/orm/6.0/javadocs/org/hibernate/cfg/AvailableSettings.html#ID_DB_STRUCTURE_NAMING_STRATEGY
+#   single legacy ou standard
+
 # base de donnees
 # spring.datasource.url=jdbc:postgresql://localhost:5432/ruchesdev
 # spring.datasource.username=postgres
