supprimé erreur si ajout hausse déjà posée sur une ruche

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,7 @@ accueil.titre=Ruches
 // voir include.html
 ign.data.key=parcellaire,agriculture,essentiels
 // true si license pour scan IGN fournie. Pour activer la couche scan.
+// si false la couche scan n'est pas affichée
 ign.carteIGN.license=false
 
 gg.map.key=yyyyy
