tests selenium amélorations

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>4.8.0</version>
+			<scope>test</scope>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
