branche tomcat10.0.27, tests Selenium OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,7 +82,7 @@ server.error.whitelabel.enabled=false
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
 # A mettre dans Catalina/localhost/ruches.xml si migration Spring Boot 2 vers 3
-# spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
 # https://prog.world/migration-to-hibernate-6/
 # https://github.com/hibernate/hibernate-orm/blob/6.0/migration-guide.adoc#id-sequence-table-name
 # https://thorben-janssen.com/migrating-to-hibernate-6/
