Suppression unique pour personne email et login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,13 +75,15 @@ server.error.whitelabel.enabled=false
 
 # test version 2.3.1
 # server.error.include-binding-errors=always
-# jpa - hibernate
-# spring.jpa.hibernate.ddl-auto=update
+# jpa - hibernate   
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization
+# none, validate, update, create, and create-drop
+#    spring.jpa.hibernate.ddl-auto=create
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 # spring.datasource.initialization-mode=always
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
-# A mettre dans Catalina/localhost/ruches.xml si migration Spring Boot 2 vers 3
+# A mettre dans Catalina/localhost/ruches.xml pour migration Spring Boot 2 vers 3
 # spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
 
 # https://prog.world/migration-to-hibernate-6/
