--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -122,6 +122,8 @@ logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
 #logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=ERROR
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.thymeleaf=DEBUG
 #logging.level.org.thymeleaf.TemplateEngine.CONFIG=ERROR
 #logging.level.org.thymeleaf.TemplateEngine.TIMER=ERROR
