--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+
+# virtual threads : pas d'amélioration du temps d'execution des tests
+# spring.threads.virtual.enabled=true 
+
+
+
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
