application.properties améliorations, commentaires

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,13 @@
 # virtual threads : pas d'amélioration du temps d'execution des tests
 # spring.threads.virtual.enabled=true 
 
-
-
+# Pour la mise en cache par le navigateur des ressources statiques servies par Spring Boot.
+# Sans doute inutile si elles sont servies par un frontal Apache.
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
+# Notifications des événements commentaire par email.
+# Fréquence du cron, destinataires et texte du mail.
 # https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/annotation/Scheduled.html
 # https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.htm#insertedID0
 # https://riptutorial.com/spring/example/21209/cron-expression
@@ -15,68 +17,108 @@ spring.resources.cache.cachecontrol.max-age=7d
 notification.cron=0 0 0 * * ?
 notification.destinataires=ooioo@free.fr
 notification.objet=Ruches Notifications
-// pour une entete de mail multiligne ajouter un espace suivi d'un \ à la fin
-//   des lignes
+# Pour une en-tete de mail multiligne ajouter un espace suivi d'un \ à la fin
+#   des lignes.
 notification.entete=Hello !\n\n
 notification.pied=\nBye !
 
+# Pour initialiser la base de données au lancement de l'application Ruches.
+# Attention, cela remplace la base courante !
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.batch
 # spring.batch.jdbc.initialize-schema=always
 
-# pagination nbre de lignes par défaut
+# Pagination nombre de lignes par défaut.
+# Utilisé par les tableaux datatables avec pagination.
 #   à choisir parmi 10, 25, 50, 100
 #    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
 #       et la pagination ne fonctionne pas
 datatables.pageLength=25
 
-# Rayons des cercles de distances de butinage
+# Rayons des cercles de distances de butinage.
+# Utilisé par les cartes OSM et IGN de détail d'un rucher.
 rucher.butinage.rayons=1000,2000,3000,4000,5000
 
-# suffixe pour nouveau nom d'essaim après essaimage
+# Suffixe pour nouveau nom d'essaim après essaimage.
+# Utilisé par détail d'un essaim, essaimage.
 essaime.suffix=_e
 
-# Poids en kg estimé du reste du miel dans une hausse après récolte
-# utilisé pour calculer le poids de miel récolté dans la hausse
-# avec une simple pesée avant récolte de la hausse
+# Poids en kg estimé du reste du miel dans une hausse après récolte.
+# Utilisé pour calculer le poids de miel récolté dans la hausse
+# avec une simple pesée avant récolte de la hausse.
 hausse.reste.miel = 1
 
-# rayon de dispersion des ruches dans le rucher
+# Rayon de dispersion des ruches dans le rucher.
+# Utilisé pour placer automatiquement des ruches dans un rucher.
 rucher.ruche.dispersion=10
-# distance au delà de laquelle les ruches sont rapprochées
+
+# Rayon de dispersion d'un rucher.
+# Utilisé pour placer automatiquement un nouveau rucher près du dépot.
+rucher.dispersion=50
+
+# Distance au delà de laquelle les ruches sont rapprochées
 #   par le bouton "Rapprocher les ruches trop éloignées" des cartes
 ruche.dist.max=200    
 
+
+# Zoom initial pour la carte Google Maps des ruches d'un rucher.
+# Utilisé par le template html.
 rucher.map.zoom=20
+
+# Zoom initial pour la carte Google Maps des ruchers.
+# Utilisé par le template html.
 ruchers.map.zoom=10
+
+# Distance au delà de laquelle une alerte est donnée par Admin/Infos
+#  pour l'éloignement des ruches par rapport à l'entrée du rucher.
 dist.ruches.loins=200
+
+# Distance au delà de laquelle une alerte est donnée par Admin/Infos
+#  pour l'éloignement de l'entrée d'un rucher par rapport au barycentre
+#  de ses ruches.
 dist.ruchers.loins=20
+
+# Nombre de semaines au delà duquel une alerte est donnée par Admin/Infos
+#  pour une ruche sans événement depuis ce délai.
 retard.ruches.evenement=4
 
+# Titre de la page d'accueil.
 accueil.titre=Ruches
 
-// clé inutilisée si fichier autoconf ign
-// voir include.html
+# Clé pour les cartes IGN, inutilisée si fichier autoconf ign
+# voir include.html
 ign.data.key=parcellaire,agriculture,essentiels
-// true si license pour scan IGN fournie. Pour activer la couche scan.
-// si false la couche scan n'est pas affichée
+
+# true si license pour scan IGN fournie. Pour activer la couche scan.
+# si false la couche scan n'est pas affichée
 ign.carteIGN.license=false
 
+# URL IGN pour le calcul des distances des ruchers.
+ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&start=
+
+
+# Clé pour les cartes Google Map des ruchers et des ruches.
+# Payantes, pas opensource et pleines de trackers.
+# Utiliser plutôt les cartes OpenStreetMap ou IGN pour la France.
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
 
-ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&start=
-
+# Clé OpenWeatherMap pour la météo dans les ruchers.
 openweathermap.key=zzzzzz
 
 # spring boot actuator
+# https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html#actuator.monitoring
 management.endpoints.web.base-path=/admin/logs
 management.endpoints.enabled-by-default=false
 management.endpoint.logfile.enabled=true
 management.endpoints.jmx.exposure.exclude=*
 management.endpoints.web.exposure.include=logfile
 
-# rest
+# URI de base pour les appels REST.
+# https://docs.spring.io/spring-data/rest/reference/introduction/getting-started.html
 spring.data.rest.basePath=/rest
 
+# Désactive la page d'erreur par défaut de Spring Boot. Utilisation de error.html.
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.actuator.customize-whitelabel-error-page
 server.error.whitelabel.enabled=false
 
 # test version 2.3.1
@@ -108,7 +150,8 @@ server.error.whitelabel.enabled=false
 # sur la deuxieme instance :
 ## spring.jmx.default-domain: test
 
-# mail
+# Envoi de mail : en cas d'oubli du mot de passe ou pour les messages de notification
+#  pour les événements commentaires.
 # 587
 # 465 SSL/TLS  Mot de passe chiffre  Utilisateur p.n
 spring.mail.host=smtp.free.fr
@@ -120,7 +163,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # spring.mail.properties.mail.smtp.starttls.enable
 email.from=xxx@free.fr
 
-# logs
+# Logs : niveau INFOS pour le code de l'application et ERROR pour le reste.
+#   Format du log et nom du fichier.
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-logging.html
 logging.level.root=ERROR
 logging.level.ooioo=INFO
